--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,7 +14,6 @@
 
   <ItemGroup>
     <Folder Include="Integration\" />
-    <Folder Include="Unit\" />
   </ItemGroup>
 
 </Project>
