Criação da Classe ViewEscolaDTO_1607121073

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -15,6 +15,11 @@
 
   <ItemGroup>
     <Folder Include="Integration\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application.CrossCutting.ViewModels\Application.CrossCutting.ViewModels.csproj" />
+    <ProjectReference Include="..\Application.DAL.UnitOfWork\Application.DAL.UnitOfWork.csproj" />
   </ItemGroup>
 
 </Project>
