--- a/Application.DAL.UnitOfWork/Application.DAL.UnitOfWork.csproj
+++ b/Application.DAL.UnitOfWork/Application.DAL.UnitOfWork.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application.CrossCutting.ViewModels\Application.CrossCutting.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
