--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application.DAL.UnitOfWork\Application.DAL.UnitOfWork.csproj" />
+    <ProjectReference Include="..\Application.Util.Helpers\Application.Util.Helpers.csproj" />
   </ItemGroup>
 
 
